--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/** {
 	box-sizing: border-box;
-}
+}*/
 
 body {
 	font-family: sans-serif;
@@ -8,10 +8,10 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 }
 
 #canvas {
-	background-color: #bbb;
-	width: 300px;
-	height: 300px;
+	background-color: #1E1E1E;
+	border-radius: 2px;
 }
