--- a/style.css
+++ b/style.css
@@ -18,9 +18,24 @@ body {
 	border-radius: 4px;
 }
 
-.btn-container {
-	display: grid;
-	grid-template-columns: auto auto;
-	grid-template-rows: auto auto;
-	gap: 6px;
+.controls {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.controls-buttons {
+	display: flex;
+}
+
+.controls-button {
+	width: 40px;
+	height: 40px;
+	margin: 5px;
+	cursor: pointer;
+	border: none;
+	background-color: #1E88E5;
+	color: #FFF;
+	border-radius: 4px;
+	font-size: 16px;
 }
