--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -71,8 +71,7 @@ body {
   transition: all 300ms;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
